@@ -233,6 +233,7 @@ Rainer Orth		ro@techfak.uni-bielefeld.de
 Rafael Laboissiere	laboissiere@psy.mpg.de
 Raja R Harinath		harinath@cs.umn.edu
 Ralf Corsepius		corsepiu@faw.uni-ulm.de
+Ralf Menzel		menzel@ls6.cs.uni-dortmund.de
 Ralf Wildenhues		Ralf.Wildenhues@gmx.de
 Ralph Schleicher	rs@purple.UL.BaWue.DE
 Ramón García Fernández	ramon@jl1.quim.ucm.es
