@@ -112,9 +112,9 @@ endif %?TOPDIR_P%
 ## be specified for `dist' conditionally.)
 ##
 	case $$dist_files in \
-	  */*) ( cd "$(distdir)" && \
-	        $(mkdir_p) `echo "$$dist_files" | \
-	                    sed -n 's,/[^/]*$$,,p' | sort -u`) ;; \
+	  */*) $(mkdir_p) `echo "$$dist_files" | \
+			   sed '/\//!d;s|^|$(distdir)/|;s,/[^/]*$$,,' | \
+			   sort -u` ;; \
 	esac; \
 ##
 ##
