@@ -1,3 +1,13 @@
+2006-06-24  Stepan Kasal  <kasal@ucw.cz>
+	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* m4/mkdirp.m4 (AM_PROG_MKDIR_P): Set `mkdir_p' to
+	`'$(MKDIR_P)'', so that it retains the per-directory value
+	computed by config.status.
+	* lib/am/distdir.am (distdir): do not use `$(mkdir_p)' from
+	a changed directory.  Bugs reported by Ralf Menzel.
+	* THANKS: Update.
+
 2006-06-24  Eric Dorland  <eric@debian.org>
 	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
